# sanqi

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release-python.yml  release-rust.yml
crates/sanqi-cli/: Cargo.toml  README.md
crates/sanqi-cli/examples/: game.sanqi
crates/sanqi-cli/src/: main.rs
crates/sanqi-core/: Cargo.toml  README.md
crates/sanqi-core/src/: lib.rs
crates/sanqi-engine/: Cargo.toml  README.md
crates/sanqi-engine/src/: lib.rs
crates/sanqi-python/: Cargo.toml  README.md  pyproject.toml
crates/sanqi-python/src/: lib.rs
crates/sanqi-render/: Cargo.toml  README.md
crates/sanqi-render/src/: lib.rs
docs/rules/: sanqi-ar.md  sanqi-de.md  sanqi-en.md  sanqi-es.md  sanqi-id.md  sanqi-tr.md  sanqi-zh.md
