[workspace]
members = [
    "crates/sanqi-cli",
    "crates/sanqi-core",
    "crates/sanqi-engine",
    "crates/sanqi-render",
    "crates/sanqi-python",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Oliver Ruebenacker", "Codex"]

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
