[workspace]
members = [
    "crates/sanqi-cli",
    "crates/sanqi-core",
    "crates/sanqi-engine",
    "crates/sanqi-render",
    "crates/sanqi-python",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/curoli/sanqi"
homepage = "https://github.com/curoli/sanqi"
rust-version = "1.85"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
