[package]
name = "sanqi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "sanqi"
path = "src/main.rs"

[dependencies]
sanqi-core = { path = "../sanqi-core" }
sanqi-engine = { path = "../sanqi-engine" }
sanqi-render = { path = "../sanqi-render" }

[lints]
workspace = true

