[package]
name = "sanqi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core rules and data structures for the Sanqi board game"
readme = "README.md"
keywords = ["board-game", "engine", "sanqi", "game"]
categories = ["game-engines"]

[lib]
name = "sanqi_core"
path = "src/lib.rs"

[lints]
workspace = true
