[package]
name = "sanqi-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "sanqi_python"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
sanqi-core = { path = "../sanqi-core" }
sanqi-engine = { path = "../sanqi-engine" }
sanqi-render = { path = "../sanqi-render" }

[lints]
workspace = true

