[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "sanqi-python"
version = "0.1.0"
description = "Python bindings for the Sanqi Rust engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Oliver Ruebenacker" }]
keywords = ["sanqi", "board game", "game engine", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/curoli/sanqi"
Repository = "https://github.com/curoli/sanqi"
Issues = "https://github.com/curoli/sanqi/issues"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "sanqi_python"
features = ["pyo3/extension-module"]
