[package]
name = "sanqi-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "ASCII and SVG rendering helpers for the Sanqi board game"
readme = "README.md"
keywords = ["board-game", "sanqi", "svg", "rendering"]
categories = ["rendering", "game-engines"]

[lib]
name = "sanqi_render"
path = "src/lib.rs"

[dependencies]
sanqi-core = { version = "0.1.0", path = "../sanqi-core" }

[lints]
workspace = true
